@@ -1,5 +1,8 @@
 2015-10-04  Andy Buckley  <andy.buckley@cern.ch>
 
+	* Add protection of svd.setThreshold call to ensure it is
+	supported/needed, via Eigen version number macros.
+
 	* Add vmin and vmax args to Ipol and IpolBin in Python.
 
 2015-10-02  Andy Buckley  <andy.buckley@cern.ch>
